connection system working in Symfony

--- a/Symfony/my_project_directory/templates/apphome/index.html.twig
+++ b/Symfony/my_project_directory/templates/apphome/index.html.twig
@@ -16,6 +16,8 @@
         <li>Your controller at <code><a href="{{ '/home/dev/gitrepo/testStudi/Symfony/my_project_directory/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/home/dev/gitrepo/testStudi/Symfony/my_project_directory/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
-    <a href="/firstroute">first route </a>
+    <a href="/homepage">homepage</a>
+    <a href="/firstroute">first route</a>
+    <a href="/mailer">mailer route</a>
 </div>
 {% endblock %}
