imporving code for connection

--- a/Symfony/my_project_directory/templates/homepage/index.html.twig
+++ b/Symfony/my_project_directory/templates/homepage/index.html.twig
@@ -14,7 +14,9 @@
         <a href="/logout">log out</a>
         Hello {{ currentuser.uuid }}
         <br>
-        <a href="/apphome">app route</a>
+        <a href="/useraccount">user account</a>
+        <br>
+        <a href="/mailer">mailer route</a>
         <br>
         This friendly message is coming from:
         <ul>
