adding sql request preparation and PDO statement with param

--- a/Symfony/my_project_directory/templates/homepage/index.html.twig
+++ b/Symfony/my_project_directory/templates/homepage/index.html.twig
@@ -12,7 +12,9 @@
     <br>
     {% if currentuser != null %}
         <a href="/logout">log out</a>
-        Hello {{ currentuser.uuid }}
+        Hello !{{ currentuser.uuid }}! from currentuser variable (controller)
+        <br>
+        Hey !{{ app.user.uuid }}! from app.user.uuid variable (twig global variable)
         <br>
         <a href="/useraccount">user account</a>
         <br>
